--- a/src/components/Toggle/__stories__/toggle.stories.mdx
+++ b/src/components/Toggle/__stories__/toggle.stories.mdx
@@ -36,7 +36,7 @@ export const toggleTemplate = createComponentTemplate(Toggle);
 - [Props](#props)
 - [Usage](#usage)
 - [Variants](#variants)
-- [Do’s and don’ts](#dos-and-donts)
+- [Do’s and don’ts](#do%E2%80%99s-and-don%E2%80%99ts)
 - [Use cases and examples](#use-cases-and-examples)
 - [Related components](#related-components)
 - [Feedback](#feedback)
