--- a/src/components/ButtonGroup/__stories__/buttonGroup.stories.mdx
+++ b/src/components/ButtonGroup/__stories__/buttonGroup.stories.mdx
@@ -31,7 +31,7 @@ export const buttonGroupTemplate = createComponentTemplate(ButtonGroup);
 - [Props](#props)
 - [Usage](#usage)
 - [Variants](#variants)
-- [Do’s and don’ts](#dos-and-donts)
+- [Do’s and don’ts](#do%E2%80%99s-and-don%E2%80%99ts)
 - [Use cases and examples](#use-cases-and-examples)
 - [Related components](#related-components)
 - [Feedback](#feedback)
