--- a/src/components/RadioButton/__stories__/radioButton.stories.mdx
+++ b/src/components/RadioButton/__stories__/radioButton.stories.mdx
@@ -22,7 +22,7 @@ export const radioButtonTemplate = createComponentTemplate(RadioButton);
 - [Props](#props)
 - [Usage](#usage)
 - [Variants](#variants)
-- [Do’s and don’ts](#dos-and-donts)
+- [Do’s and don’ts](#do%E2%80%99s-and-don%E2%80%99ts)
 - [Use cases and examples](#use-cases-and-examples)
 - [Related components](#related-components)
 - [Feedback](#feedback)
