--- a/src/components/Tooltip/__stories__/tooltip.stories.mdx
+++ b/src/components/Tooltip/__stories__/tooltip.stories.mdx
@@ -39,7 +39,7 @@ export const tooltipTemplate = args => {
 - [Usage](#usage)
 - [Variants](#variants)
 - [Themes](#themes)
-- [Do’s and don’ts](#dos-and-donts)
+- [Do’s and don’ts](#do%E2%80%99s-and-don%E2%80%99ts)
 - [Use cases and examples](#use-cases-and-examples)
 - [Related components](#related-components)
 - [Feedback](#feedback)
