--- a/src/components/IconButton/__stories__/IconButton.stories.mdx
+++ b/src/components/IconButton/__stories__/IconButton.stories.mdx
@@ -21,7 +21,6 @@ import {
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { BUTTON_GROUP, MENU_BUTTON, BUTTON } from "../../../storybook/components/related-components/component-description-map";
 import { Link, createComponentTemplate, createStoryMetaSettings } from "../../../storybook";
-import LinkComponent  from "../../Link/Link";
 import Icon from "../../Icon/Icon";
 import Heading from "../../Heading/Heading";
 import classes from "./iconButton.stories.module.scss";
@@ -190,7 +189,7 @@ Set disable button for something that isn’t usable. Use a tooltip on hover in 
                 <Avatar size={Avatar.sizes.LARGE} src={person1} type={Avatar.types.IMG} />
                 <Flex direction={Flex.directions.COLUMN} className={classes.recycleBinContent} align={Flex.justify.START} ariaLabelledby="monday-recycle-bin-title">
                     <Flex gap={Flex.gaps.XS}>
-                        <LinkComponent text="Hadas Farhi"/><span>deleted the item </span><span className={classes.recycleBinItemName}>Hello World</span><span>from the board</span>
+                        <Link withoutSpacing>Hadas Farhi</Link><span>deleted the item </span><span className={classes.recycleBinItemName}>Hello World</span><span>from the board</span>
                     </Flex>
                     <span className={classes.recycleBinBoardName}>Tasks</span>
                     <Flex gap={Flex.gaps.XS} className={classes.recycleBinSubNote}>
