fix - docs: broken anchor with apostrophes (#1286) Yaron Galperin

--- a/src/components/Heading/__stories__/Heading.stories.mdx
+++ b/src/components/Heading/__stories__/Heading.stories.mdx
@@ -34,7 +34,7 @@ export const headingTemplate = createComponentTemplate(Heading);
 - [Props](#props)
 - [Usage](#usage)
 - [Variants](#variants)
-- [Do’s and don’ts](#do%E2%80%99s-and-don%E2%80%99ts)
+- [Do’s and don’ts](#dos-and-donts)
 - [Use cases and examples](#use-cases-and-examples)
 - [Related components](#related-components)
 - [Feedback](#feedback)
