--- a/src/components/Link/__stories__/Link.stories.mdx
+++ b/src/components/Link/__stories__/Link.stories.mdx
@@ -26,7 +26,7 @@ export const linkTemplate = createComponentTemplate(Link);
 - [Props](#props)
 - [Usage](#usage)
 - [Variants](#variants)
-- [Do’s and don’ts](#do%E2%80%99s-and-don%E2%80%99ts)
+- [Do’s and don’ts](#dos-and-donts)
 - [Use cases and examples](#use-cases-and-examples)
 - [Related components](#related-components)
 - [Feedback](#feedback)
