--- a/src/components/SplitButton/__stories__/splitButton.stories.mdx
+++ b/src/components/SplitButton/__stories__/splitButton.stories.mdx
@@ -43,7 +43,7 @@ export const splitButtonTemplate = createComponentTemplate(SplitButton);
 - [Props](#props)
 - [Usage](#usage)
 - [Variants](#variants)
-- [Do’s and don’ts](#do%E2%80%99s-and-don%E2%80%99ts)
+- [Do’s and don’ts](#dos-and-donts)
 - [Use cases and examples](#use-cases-and-examples)
 - [Related components](#related-components)
 - [Feedback](#feedback)
