Add support on close button theme for tipseen

--- a/src/components/Tipseen/__stories__/tipseen.stories.mdx
+++ b/src/components/Tipseen/__stories__/tipseen.stories.mdx
@@ -19,7 +19,7 @@ import "./tipseen.stories.scss";
 
 export const metaSettings = createStoryMetaSettings({
   component: Tipseen,
-  enumPropNamesArray: ["position", "animationType", "justify"]
+  enumPropNamesArray: ["position", "animationType", "justify", "closeButtonTheme"]
 });
 
 <Meta
