--- a/src/components/ProgressBars/LinearProgressBar/__stories__/linearProgressBar.stories.mdx
+++ b/src/components/ProgressBars/LinearProgressBar/__stories__/linearProgressBar.stories.mdx
@@ -58,7 +58,7 @@ Progress bars show continuous progress through a process, such as a percentage v
 </Canvas>
 
 ## Props
-<ArgsTable of={ LinearProgressBar } />
+<ArgsTable story="Overview" />
 
 ## Usage
 <UsageGuidelines guidelines={[
