docs: <IconButton> fix size in one of the stories

--- a/src/components/IconButton/__stories__/IconButton.stories.mdx
+++ b/src/components/IconButton/__stories__/IconButton.stories.mdx
@@ -201,7 +201,7 @@ Set disable button for something that isn’t usable. Use a tooltip on hover in 
                 <Button className={classes.recycleBinRestoreButton}>Restore</Button>
             </Flex>
         </Flex>
-        <IconButton icon={CloseSmall} ariaLabel="Remove from Recycle bin"/>
+        <IconButton icon={CloseSmall} size={IconButton.sizes.SMALL} ariaLabel="Remove from Recycle bin"/>
     </Story>
 </Canvas>
 
