--- a/src/hooks/usePreventScroll/__stories__/useScrollLock.stories.mdx
+++ b/src/hooks/usePreventScroll/__stories__/useScrollLock.stories.mdx
@@ -17,11 +17,11 @@ Use this hook to prevent scroll for element.
 <Canvas>
   <Story name="Overview">
     {() => {
-        const { lockScroll, unlockScroll } = useScrollLock(".scrollable");
+        const { disableScroll, enableScroll } = useScrollLock(".scrollable");
         return (
             <div>
-                <button onClick={lockScroll}>Lock Scroll</button>
-                <button onClick={unlockScroll}>Unlock Scroll</button>
+                <button onClick={disableScroll}>Disable Scroll</button>
+                <button onClick={enableScroll}>Enable Scroll</button>
                 <div className="scrollable" style={{ height: "200px", width: "500px", overflow: "auto" }}>
                     <p>Scrollable Content</p>
                     <p>Scrollable Content</p>
