--- a/src/hooks/useDisableScroll/__stories__/useDisableScroll.stories.mdx
+++ b/src/hooks/useDisableScroll/__stories__/useDisableScroll.stories.mdx
@@ -2,7 +2,7 @@ import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import useScrollLock from "..";
 import { FunctionArgument, FunctionArguments, UsageGuidelines } from "../../../storybook";
 
-<Meta title="Hooks/useScrollLock" />
+<Meta title="Hooks/useDisableScroll" />
 
 # useScrollLock
 
@@ -12,7 +12,7 @@ import { FunctionArgument, FunctionArguments, UsageGuidelines } from "../../../s
 - [Feedback](#feedback)
 
 ## Overview
-Use this hook to prevent scroll for element.
+Use this hook to disable scroll for element.
 
 <Canvas>
   <Story name="Overview">
