--- a/src/hooks/useDisableScroll/__stories__/useDisableScroll.stories.mdx
+++ b/src/hooks/useDisableScroll/__stories__/useDisableScroll.stories.mdx
@@ -49,8 +49,8 @@ Use this hook to disable scroll for element.
 ## Returns
 
 <FunctionArguments>
-    <FunctionArgument type="function" description="Function to lock scroll." />
-    <FunctionArgument type="function" description="Function to nulock scroll." />
+    <FunctionArgument name="disableScroll" type="function" description="Call this function to disable scroll." />
+    <FunctionArgument  name="enableScroll" type="function" description="Call this function to enable scroll." />
 </FunctionArguments>
 
 ## Usage
