--- a/src/components/Tipseen/__stories__/tipseen.stories.mdx
+++ b/src/components/Tipseen/__stories__/tipseen.stories.mdx
@@ -154,7 +154,7 @@ Use when the tip is too long or when you want to teach something in steps.
           // Therefore, there is no need to move this prop in your implementations.
           position={Tipseen.positions.RIGHT}
           modifiers={modifiers}
-          isCloseButtonOnImage
+          closeButtonTheme={Tipseen.closeButtonThemes.DARK}
           content={
             <>
               <TipseenImage className="monday-storybook-tipseen_image" src={picture} />
