add-disable-scroll-to-dialog

--- a/src/components/Dialog/__stories__/Dialog.stories.mdx
+++ b/src/components/Dialog/__stories__/Dialog.stories.mdx
@@ -461,6 +461,45 @@ We can set the triggers which will be responsible for hide the dialog
   </Story>
 </Canvas>
 
+
+### Dialog prevent container scroll
+
+Prevent containerSelector scroll when dialog open
+
+<Canvas>
+    <Story name="Disable scroll when dialog open">
+        {() => {
+            // For maintain active state of each button according to the dialog open state (this hooks is available for your usage)
+            const { isChecked: checkedTop, onChange: onChangeTop } = useSwitch({ defaultChecked: false });
+            return (
+                <Flex className="monday-storybook-dialog--story-padding" gap={Flex.gaps.MEDIUM}>
+                    <div className={'scrollable'} style={{ height: '300px', width: '400px', overflow: "auto"}} >
+                        <div style={{height: '800px'}}>
+                        <Dialog
+                            open={checkedTop}
+                            position={Dialog.positions.LEFT}
+                            showTrigger={[]}
+                            hideTrigger={[]}
+                            containerSelector={'.scrollable'}
+                            disableContainerScroll
+                            content={
+                                <DialogContentContainer>
+                                    <ExampleContent />
+                                </DialogContentContainer>
+                            }
+                        >
+                            <Button kind={Button.kinds.SECONDARY} onClick={onChangeTop} active={checkedTop}>
+                                Click
+                            </Button>
+                        </Dialog>
+                        </div>
+                    </div>
+                </Flex>
+            );
+        }}
+    </Story>
+</Canvas>
+
 ## Related components
 
 <RelatedComponents componentsNames={[MENU, TOOLTIP, DIALOG_CONTENT_CONTAINER]} />
