fix chips with background docs

--- a/src/components/Chips/__stories__/chips.stories.mdx
+++ b/src/components/Chips/__stories__/chips.stories.mdx
@@ -159,7 +159,7 @@ e.g.
 When a chip appears on a background color identical to its color, use `showBorder` prop in order to add a distinctive white border.
 <Canvas>
   <Story name="On color">
-    <Flex style={{ width: "100%" }} align={Flex.align.STRETCH} justify={Flex.justify.CENTER}>
+    <Flex style={{ width: "100%" }} align={Flex.align.START} justify={Flex.justify.CENTER}>
       <Flex
         align={Flex.align.CENTER}
         justify={Flex.justify.CENTER}
