--- a/src/components/Dialog/__stories__/Dialog.stories.mdx
+++ b/src/components/Dialog/__stories__/Dialog.stories.mdx
@@ -78,7 +78,7 @@ The dialog component's purpose is to position a popup component nearby another e
 Please be aware that the dialog component is not responsible for the appearance features of the popup, such as its background color or size.
 
 <Canvas>
-  <Story name="Overview">{dialogTemplate.bind({})}</Story>
+  <Story docs={{source:{code: "dd", type: "code"}}} name="Overview">{dialogTemplate.bind({})}</Story>
 </Canvas>
 
 <Tip>
