--- a/src/components/Modal/__stories__/modal.stories.mdx
+++ b/src/components/Modal/__stories__/modal.stories.mdx
@@ -269,7 +269,7 @@ Use the ModalHeader component to display a Header with an icon
             closeButtonAriaLabel={"close"}
             width={Modal.width.DEFAULT}
           >
-            {/** Please implement your an custom Modal header and set it as child for adding an Icon to your modal*/}
+            {/** Please implement your custom Modal header and set it as child for adding an Icon to your modal **/}
             <ModalHeader title={"Modal Title"} icon={Settings} />
             <ModalContent>
               <p className="modal-content">Modal content goes here</p>
@@ -409,7 +409,7 @@ clicking outside. Use this variant in case of sensitive or important messages, a
             closeButtonAriaLabel={"close"}
             width={Modal.width.DEFAULT}
           >
-            {/** Please follow the design guidelines when implementing custom title */}
+            {/** Please follow the design guidelines when implementing custom title **/}
             <ModalHeader
               title={
                 <EditableHeading
