--- a/src/components/Dialog/__stories__/Dialog.stories.mdx
+++ b/src/components/Dialog/__stories__/Dialog.stories.mdx
@@ -4,8 +4,14 @@ import { createStoryMetaSettings, Link } from "../../../storybook";
 import { Button, DialogContentContainer, IconButton, AttentionBox } from "../../../components";
 import { ExampleContent } from "./helpers";
 import { Info } from "../../Icon/Icons";
-import {closeTriggersInteractionSuite} from "../__tests__/Dialog.interactions.ts";
-import {CONTEXT_MENU_DIALOG, HIDE_TRIGGERS_CONTAINER} from "../__tests__/DialogDataTestIds";
+import { closeTriggersInteractionSuite } from "../__tests__/Dialog.interactions.ts";
+import {
+  CONTEXT_MENU_DIALOG,
+  HIDE_TRIGGERS_CONTAINER,
+  CLICK_OUTSIDE_DIALOG,
+  CLICK_OUTSIDE_DIALOG_BUTTON
+} from "../__tests__/DialogDataTestIds";
+
 import {
   MENU,
   DIALOG_CONTENT_CONTAINER,
@@ -330,9 +336,9 @@ We can set the triggers which will be responsible for hide the dialog
       const { isChecked: contentClickButtonActive, onChange: switchContentClickActive } = useSwitch({
         defaultChecked: true
       });
-        const { isChecked: contextMenuButtonActive, onChange: switchContextMenuActive } = useSwitch({
-            defaultChecked: true
-        });
+      const { isChecked: contextMenuButtonActive, onChange: switchContextMenuActive } = useSwitch({
+        defaultChecked: true
+      });
       const modifiers =
         // for prevent dialog to move while scrolling
         [
@@ -345,8 +351,8 @@ We can set the triggers which will be responsible for hide the dialog
         ];
       return (
         <Flex
-            data-testid={HIDE_TRIGGERS_CONTAINER}
-            id={HIDE_TRIGGERS_CONTAINER}
+          data-testid={HIDE_TRIGGERS_CONTAINER}
+          id={HIDE_TRIGGERS_CONTAINER}
           className="monday-storybook-dialog_hide-triggers-story"
           wrap
           direction={Flex.directions.COLUMN}
@@ -367,6 +373,7 @@ We can set the triggers which will be responsible for hide the dialog
             }
           >
             <Button
+              data-testid={CLICK_OUTSIDE_DIALOG_BUTTON}
               kind={Button.kinds.SECONDARY}
               active={clickOutsideButtonActive}
               onClick={switchClickOutsideActive}
@@ -462,72 +469,67 @@ We can set the triggers which will be responsible for hide the dialog
               On mouse leave
             </Button>
           </Dialog>
-            <Dialog
-                modifiers={modifiers}
-                shouldShowOnMount
-                showTrigger={[Dialog.hideShowTriggers.CLICK]}
-                hideTrigger={[Dialog.hideShowTriggers.CONTEXT_MENU]}
-                position={Dialog.positions.RIGHT}
-                containerSelector={`#${HIDE_TRIGGERS_CONTAINER}`} // for testing purpose
-                onDialogDidHide={switchContextMenuActive}
-                onDialogDidShow={switchContextMenuActive}
-                content={
-                    <DialogContentContainer data-testid={CONTEXT_MENU_DIALOG}>
-                        <ExampleContent rowsCount={1} />
-                    </DialogContentContainer>
-                }
-            >
-                <Button
-                    kind={Button.kinds.SECONDARY}
-                    active={contextMenuButtonActive}
-                    style={{ marginBlock: "54px" }}
-                >
-                    On right click
-                </Button>
-            </Dialog>
+          <Dialog
+            modifiers={modifiers}
+            shouldShowOnMount
+            showTrigger={[Dialog.hideShowTriggers.CLICK]}
+            hideTrigger={[Dialog.hideShowTriggers.CONTEXT_MENU]}
+            position={Dialog.positions.RIGHT}
+            containerSelector={`#${HIDE_TRIGGERS_CONTAINER}`} // for testing purpose
+            onDialogDidHide={switchContextMenuActive}
+            onDialogDidShow={switchContextMenuActive}
+            content={
+              <DialogContentContainer data-testid={CONTEXT_MENU_DIALOG}>
+                <ExampleContent rowsCount={1} />
+              </DialogContentContainer>
+            }
+          >
+            <Button kind={Button.kinds.SECONDARY} active={contextMenuButtonActive} style={{ marginBlock: "54px" }}>
+              On right click
+            </Button>
+          </Dialog>
         </Flex>
       );
     }}
   </Story>
 </Canvas>
 
-
 ### Dialog prevent container scroll
 
 Prevent containerSelector scroll when dialog open
 
 <Canvas>
-    <Story name="Disable scroll when dialog open">
-        {() => {
-            // For maintain active state of each button according to the dialog open state (this hooks is available for your usage)
-            const { isChecked: checkedTop, onChange: onChangeTop } = useSwitch({ defaultChecked: false });
-            return (
-                <Flex className="monday-storybook-dialog--story-padding" gap={Flex.gaps.MEDIUM}>
-                    <div className={'scrollable'} style={{ height: '300px', width: '400px', overflow: "auto"}} >
-                        <div style={{height: '800px'}}>
-                        <Dialog
-                            open={checkedTop}
-                            position={Dialog.positions.LEFT}
-                            showTrigger={[]}
-                            hideTrigger={[]}
-                            containerSelector={'.scrollable'}
-                            disableContainerScroll
-                            content={
-                                <DialogContentContainer>
-                                    <ExampleContent />
-                                </DialogContentContainer>
-                            }
-                        >
-                            <Button kind={Button.kinds.SECONDARY} onClick={onChangeTop} active={checkedTop}>
-                                Click
-                            </Button>
-                        </Dialog>
-                        </div>
-                    </div>
-                </Flex>
-            );
-        }}
-    </Story>
+  <Story name="Disable scroll when dialog open">
+    {() => {
+      // For maintain active state of each button according to the dialog open state (this hooks is available for your usage)
+      const { isChecked: checkedTop, onChange: onChangeTop } = useSwitch({ defaultChecked: false });
+      return (
+        <Flex className="monday-storybook-dialog--story-padding" gap={Flex.gaps.MEDIUM}>
+          <div className={"scrollable"} style={{ height: "300px", width: "400px", overflow: "auto" }}>
+            <div style={{ height: "800px" }}>
+              <Dialog
+                open={checkedTop}
+                position={Dialog.positions.LEFT}
+                showTrigger={[]}
+                hideTrigger={[]}
+                containerSelector={".scrollable"}
+                disableContainerScroll
+                content={
+                  <DialogContentContainer>
+                    <ExampleContent />
+                  </DialogContentContainer>
+                }
+              >
+                <Button kind={Button.kinds.SECONDARY} onClick={onChangeTop} active={checkedTop}>
+                  Click
+                </Button>
+              </Dialog>
+            </div>
+          </div>
+        </Flex>
+      );
+    }}
+  </Story>
 </Canvas>
 
 ## Related components
