docs: remove irrelevant story overrides, renaming storybook styles

--- a/src/components/Modal/__stories__/modal.stories.mdx
+++ b/src/components/Modal/__stories__/modal.stories.mdx
@@ -44,7 +44,7 @@ export const modalTemplate = ({ onClose, ...modalProps }) => {
         {...modalProps}
       >
         <ModalContent>
-          <p className="modal-content">Modal content goes here</p>
+          <p>Modal content goes here</p>
         </ModalContent>
         <ModalFooter>
           <Flex justify={Flex.justify.END} gap={12}>
@@ -142,7 +142,7 @@ Use modal for short and non-frequent tasks. For common tasks consider using the 
             width={Modal.width.DEFAULT}
           >
             <ModalContent>
-              <p className="modal-content">Modal content goes here</p>
+              <p>Modal content goes here</p>
             </ModalContent>
             <ModalFooter>
               <Flex justify={Flex.justify.END} gap={12}>
@@ -181,7 +181,7 @@ Use modal for short and non-frequent tasks. For common tasks consider using the 
             width={Modal.width.FULL_WIDTH}
           >
             <ModalContent>
-              <p className="modal-content">Modal content goes here</p>
+              <p>Modal content goes here</p>
             </ModalContent>
             <ModalFooter>
               <Flex justify={Flex.justify.END} gap={12}>
@@ -220,7 +220,7 @@ Use modal for short and non-frequent tasks. For common tasks consider using the 
             width={"720px"}
           >
             <ModalContent>
-              <p className="modal-content">Modal content goes here</p>
+              <p>Modal content goes here</p>
             </ModalContent>
             <ModalFooter>
               <Flex justify={Flex.justify.END} gap={12}>
@@ -272,7 +272,7 @@ Use the ModalHeader component to display a Header with an icon
             {/** Please implement your custom Modal header and set it as child for adding an Icon to your modal **/}
             <ModalHeader title={"Modal Title"} icon={Settings} />
             <ModalContent>
-              <p className="modal-content">Modal content goes here</p>
+              <p>Modal content goes here</p>
             </ModalContent>
             <ModalFooter>
               <Flex justify={Flex.justify.END} gap={12}>
@@ -322,7 +322,7 @@ clicking outside. Use this variant in case of sensitive or important messages, a
             onClose={closeModal}
           >
             <ModalContent>
-              <p className="modal-content">Modal content goes here</p>
+              <p>Modal content goes here</p>
             </ModalContent>
             <ModalFooter>
               <Flex justify={Flex.justify.END} gap={12}>
@@ -412,7 +412,7 @@ clicking outside. Use this variant in case of sensitive or important messages, a
             {/** Please follow the design guidelines when implementing custom title **/}
             <ModalHeader title={<EditableHeading type={EditableHeading.types.h2} placeholder={"Modal title"} />} />
             <ModalContent>
-              <p className="modal-content">Modal content goes here</p>
+              <p>Modal content goes here</p>
             </ModalContent>
             <ModalFooter>
               <Flex justify={Flex.justify.END} gap={12}>
