wip: description text in the editable heading story

--- a/src/components/Modal/__stories__/modal.stories.mdx
+++ b/src/components/Modal/__stories__/modal.stories.mdx
@@ -410,7 +410,7 @@ clicking outside. Use this variant in case of sensitive or important messages, a
             width={Modal.width.DEFAULT}
           >
             {/** Please follow the design guidelines when implementing custom title **/}
-            <ModalHeader title={<EditableHeading type={EditableHeading.types.h2} placeholder={"Modal title"} />} />
+            <ModalHeader description={"Description text goes here"} title={<EditableHeading type={EditableHeading.types.h2} placeholder={"Modal title"} />} />
             <ModalContent>
               <p>Modal content goes here</p>
             </ModalContent>
